changed Join Us, name to pawprints

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<img src="https://r.mobirisesite.com/659076/assets/images/1677b57d.jpeg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="navbar-caption text-black display-4" href="https://mobiri.se">Miyu Tabby</a></span>
+				<span class="navbar-caption-wrap"><div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="navbar-caption text-black display-4" href="https://mobiri.se">Miyu's Pawprints</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -157,7 +157,7 @@
 					</li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
-					<a class="btn btn-primary display-4" href="https://mobiri.se">Join Us</a>
+					<a class="btn btn-primary display-4" href="https://www.instagram.com/tabby.miyu?igsh=Mmx5YnFjbml5eGJ4">Instagram</a>
 				</div>
 			</div>
 		</div>
