changed nav bar image

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="navbar-brand">
 				<span class="navbar-logo">
 					<a href="https://mobiri.se">
-						<img src="https://r.mobirisesite.com/659076/assets/images/1677b57d.jpeg" alt="Mobirise Website Builder" style="height: 4.3rem;">
+						<img src="https://github.com/miyu-tabby/miyu-tabby.github.io/blob/264d11598a8690deb80f73493ea9cdf37c8c2ba0/PXL_20230913_231109241.jpg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
 				<span class="navbar-caption-wrap"><div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="navbar-caption text-black display-4" href="https://mobiri.se">Miyu's Pawprints</a></span>
