small changes to text

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div class="row">
       <div class="content-wrap col-12 col-md-12">
         <h1 class="mbr-section-title mbr-white mb-4 display-1">
-          <strong>Feline Forever</strong>
+          <strong>Forever loved</strong>
         </h1>
         <p class="mbr-text mbr-white mb-4 display-7">Celebrating the life and antics of my beloved cat, Miyu!</p>
         <div class="mbr-section-btn">
@@ -238,7 +238,7 @@
                 <div class="item-wrapper">
                     <div class="title mb-2 mb-md-3">
                         <span class="num mbr-fonts-style display-1">
-                            <strong>12</strong></span>
+                            <strong>1.33</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
                         <strong>Years of Joy</strong>
@@ -250,7 +250,7 @@
                 <div class="item-wrapper">
                     <div class="title mb-2 mb-md-3">
                         <span class="num mbr-fonts-style display-1">
-                            <strong>100+</strong></span>
+                            <strong>1000+</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
                         <strong>Memorable Moments</strong>
@@ -265,7 +265,7 @@
                             <strong>1</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
-                        <strong>Unforgettable Love</strong>
+                        <strong>Unforgettable Bond</strong>
                     </h4>
                     
                 </div>
@@ -282,7 +282,7 @@
       <div class="col-12 content-head">
         <div class="mbr-section-head mb-5">
           <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-            <strong>Whiskers in Action!</strong>
+            <strong>Miyu in Action!</strong>
           </h4>
           
         </div>
