--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h1 class="mbr-section-title mbr-white mb-4 display-1">
           <strong>Forever loved</strong>
         </h1>
-        <p class="mbr-text mbr-white mb-4 display-7">Celebrating the life and antics of my beloved cat, Miyu!</p>
+        <p class="mbr-text mbr-white mb-4 display-7">Celebrating the life and antics of our beloved cat, Miyu!</p>
         <div class="mbr-section-btn">
           <a class="btn btn-white-outline display-7" href="#gallery">Explore Now</a>
         </div>
