--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       <div class="col-12 content-head">
         <div class="mbr-section-head">
           <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-            <strong>Whiskers' Greatest Hits</strong>
+            <strong>Miyu's Greatest Hits</strong>
           </h4>
           
         </div>
@@ -445,10 +445,10 @@
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mt-0 mb-2 display-5">
-              <strong>The Day He Stole My Sandwich</strong>
+              <strong>The Silvervine Trance</strong>
             </h5>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">August 1, 2023</p>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">Whiskers executed the perfect heist! My lunch was gone in seconds. Check out the hilarious video of his sneaky tactics!</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">Miyu discovered the joys of getting high! She couldn't stop rolling around. Check out her video that became the talk of town!</p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
             </div>
@@ -462,10 +462,10 @@
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
-              <strong>Whiskers vs. The Vacuum Cleaner</strong>
+              <strong>A Tryst with Flora</strong>
             </h5>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">July 15, 2023</p>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">A battle for the ages! Watch as Whiskers bravely confronts the terrifying vacuum. Spoiler: he wins... sort of.</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">A love story for the big screen! Watch Miyu munching on grass and lounging in pots blissfully. </p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
             </div>
@@ -479,10 +479,10 @@
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
-              <strong>The Great Catnip Caper</strong>
+              <strong>Baby's Day Out</strong>
             </h5>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">June 20, 2023</p>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">Whiskers discovered a stash of catnip and went wild! Relive the chaos in this unforgettable video.</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">Miyu discovers her explorer's itch in this unforgettable video.</p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
             </div>
@@ -496,10 +496,10 @@
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
-              <strong>Whiskers' Epic Nap Adventures</strong>
+              <strong>Miyu the Mouser</strong>
             </h5>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">May 10, 2023</p>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">From sunbeams to cozy blankets, see where Whiskers chose to nap. His napping skills were truly legendary!</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">A huntress at heart, Miyu loved the thrill of the chase. Watch her as she teases her prey!</p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
             </div>
