--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 video-block">
-        <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/iKAewWqera8?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=iKAewWqera8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+        <div class="video-wrapper"><iframe class="mbr-embedded-video" src="images/PXL_20230702_010828998.mp4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         
       </div>
     </div>
