Changed images in Miyu in action section

--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
     <div class="grid-container">
       <div class="grid-container-3 moving-left" style="transform: translate3d(-200px, 0px, 0px);">
         <div class="grid-item">
-          <img src="https://r.mobirisesite.com/659076/assets/images/photo-1535696588143-945e1379f1b0.jpeg" alt="Mobirise Website Builder">
+          <img src="images/PXL_20230916_220007051.PORTRAIT.jpg">
         </div>
         <div class="grid-item">
-          <img src="https://r.mobirisesite.com/659076/assets/images/photo-1511044568932-338cba0ad803.jpeg" alt="Mobirise Website Builder">
+          <img src="images/PXL_20240820_015648351.PORTRAIT.jpg">
         </div>
         <div class="grid-item">
-          <img src="https://r.mobirisesite.com/659076/assets/images/photo-1511275539165-cc46b1ee89bf.jpeg" alt="Mobirise Website Builder">
+          <img src="images/PXL_20231006_164131744.PORTRAIT.jpg">
         </div>
         <div class="grid-item">
-          <img src="https://r.mobirisesite.com/659076/assets/images/photo-1534803359379-964dadf6c290.jpeg" alt="Mobirise Website Builder">
+          <img src="images/PXL_20231006_030726527.PORTRAIT.jpg">
         </div>
       </div>
     </div>
