added more images, changed images, changed minor text

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 				<div class="card-wrapper">
 					<div class="card-box align-center">
 						<h1 class="card-title mbr-fonts-style mb-4 display-1">
-							<strong>Celebrate My Cat's Legacy</strong>
+							<strong>Celebrate Our Cat's Legacy</strong>
 						</h1>
 						
 						<div class="mbr-section-btn mt-4">
@@ -441,14 +441,14 @@
       <div class="item features-image col-12 col-md-6 col-lg-3 active">
         <div class="item-wrapper">
           <div class="item-img mb-3">
-            <img src="https://r.mobirisesite.com/659076/assets/images/photo-1448222993383-a2fff2914d27.jpeg" alt="Mobirise Website Builder" title="">
+            <img src="images/PXL_20231120_211039604.PORTRAIT.jpg" alt="Mobirise Website Builder" title="">
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mt-0 mb-2 display-5">
               <strong>The Silvervine Trance</strong>
             </h5>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">August 1, 2023</p>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">Miyu discovered the joys of getting high! She couldn't stop rolling around. Check out her video that became the talk of town!</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">Miyu isn't always such a picture of poise! She has secretly dabbled in the pleasures of getting high. Check out her scandalous video that became the talk of town!</p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
             </div>
@@ -458,13 +458,13 @@
       <div class="item features-image col-12 col-md-6 col-lg-3">
         <div class="item-wrapper">
           <div class="item-img mb-3">
-            <img src="https://r.mobirisesite.com/659076/assets/images/photo-1513360371669-4adf3dd7dff8.jpeg" alt="Mobirise Website Builder" title="" data-slide-to="1" data-bs-slide-to="1">
+            <img src="images/PXL_20231207_171725825.MP-EDIT.jpg" alt="Mobirise Website Builder" title="" data-slide-to="1" data-bs-slide-to="1">
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
               <strong>A Tryst with Flora</strong>
             </h5>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">July 15, 2023</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">Dec 7, 2023</p>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">A love story for the big screen! Watch Miyu munching on grass and lounging in pots blissfully. </p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
@@ -475,13 +475,13 @@
       <div class="item features-image col-12 col-md-6 col-lg-3">
         <div class="item-wrapper">
           <div class="item-img mb-3">
-            <img src="https://r.mobirisesite.com/659076/assets/images/photo-1496522650602-5988dce09660.jpeg" alt="Mobirise Website Builder" title="" data-slide-to="2" data-bs-slide-to="2">
+            <img src="images/PXL_20240517_013501272~2.jpg" alt="Mobirise Website Builder" title="" data-slide-to="2" data-bs-slide-to="2">
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
               <strong>Baby's Day Out</strong>
             </h5>
-            <p class="mbr-text mbr-fonts-style mb-3 display-7">June 20, 2023</p>
+            <p class="mbr-text mbr-fonts-style mb-3 display-7">May 17, 2024</p>
             <p class="mbr-text mbr-fonts-style mb-3 display-7">Miyu discovers her explorer's itch in this unforgettable video.</p>
             <div class="mbr-section-btn item-footer">
               <a href="" class="btn item-btn btn-primary display-7">Watch!</a>
@@ -492,7 +492,7 @@
       <div class="item features-image col-12 col-md-6 col-lg-3">
         <div class="item-wrapper">
           <div class="item-img mb-3">
-            <img src="https://r.mobirisesite.com/659076/assets/images/photo-1517451330947-7809dead78d5.jpeg" alt="Mobirise Website Builder" title="" data-slide-to="2" data-bs-slide-to="2">
+            <img src="images/PXL_20240329_200858392.PORTRAIT.jpg" title="" data-slide-to="2" data-bs-slide-to="2">
           </div>
           <div class="item-content align-left">
             <h5 class="item-title mbr-fonts-style mb-2 mt-0 display-5">
