tried adding video using chatgpt

--- a/index.html
+++ b/index.html
@@ -307,8 +307,12 @@
   </div>
 </section>
 
-<section data-bs-version="5.1" class="header18 cid-umUNdfGcGs mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/PzGI-FBzcNE?autoplay=1&amp;loop=1&amp;playlist=PzGI-FBzcNE&amp;t=20&amp;mute=1&amp;playsinline=1&amp;controls=0&amp;showinfo=0&amp;autohide=1&amp;allowfullscreen=true&amp;mode=transparent" id="video-5-umUNdfGcGs">
-  
+<section data-bs-version="5.1" class="header18 cid-umUNdfFvIv mbr-fullscreen" data-bg-video="images/PXL_20231215_202304970.mp4" id="hero-15-umUNdfFvIv">
+    <video autoplay loop muted playsinline controls="false">
+        <source src="images/PXL_20231215_202304970.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
   <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);"></div>
   <div class="container-fluid">
