--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://.se">
+					<a href="https://mobiri.se">
 						<img src="images/PXL_20230913_231109241.jpg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
