--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="#index.html">
 						<img src="images/PXL_20230913_231109241.jpg" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="navbar-caption text-black display-4" href="https://mobiri.se">Miyu's Pawprints</a></span>
+				<span class="navbar-caption-wrap"><div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="navbar-caption text-black display-4" href="#index.html">Miyu's Pawprints</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
