--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 						<div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="nav-link link text-black display-4" href="#gallery-16-umUNdfGa1D" aria-expanded="false">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="https://mobiri.se">Tributes</a>
+						<a class="nav-link link text-black display-4" href="">Tributes</a>
 					</li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn">
+				<!-- <div class="navbar-buttons mbr-section-btn">
 					<a class="btn btn-primary display-4" href="https://www.instagram.com/tabby.miyu?igsh=Mmx5YnFjbml5eGJ4">Instagram</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</nav>
