--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 						<div contenteditable="true" style="position: absolute; left: -100000px; opacity: 0;"></div><a class="nav-link link text-black display-4" href="#gallery-16-umUNdfGa1D" aria-expanded="false">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="">Tributes</a>
+						<a class="nav-link link text-black display-4" href="#index.html">Tributes</a>
 					</li></ul>
 				
 				<!-- <div class="navbar-buttons mbr-section-btn">
@@ -319,30 +319,6 @@
     <div class="row">
     </div>
   </div>
-</section>
-
-<section data-bs-version="5.1" class="header14 cid-umUNdfG5Jq mbr-parallax-background" id="call-to-action-1-umUNdfG5Jq">
-	
-
-	
-	
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="card col-12 col-md-12 col-lg-8">
-				<div class="card-wrapper">
-					<div class="card-box align-center">
-						<h1 class="card-title mbr-fonts-style mb-4 display-1">
-							<strong>Celebrate Our Cat's Legacy</strong>
-						</h1>
-						
-						<div class="mbr-section-btn mt-4">
-							<a class="btn btn-primary display-7" href="https://mobiri.se">Join the Fun!</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 </section>
 
 <section data-bs-version="5.1" class="image02 cid-umUNdfGkCf mbr-fullscreen mbr-parallax-background" id="image-13-umUNdfGkCf">
