--- a/index.html
+++ b/index.html
@@ -337,27 +337,27 @@
     <div class="container">
       <h2 class="section-title">My Skills</h2>
       <div class="skill">
-        <label for="html-skill">HTML</label>
+        <label for="html-skill">Purring</label>
         <div class="progress-bar">
-          <div id="html-skill" class="progress" style="width: 90%;">90%</div>
+          <div id="html-skill" class="progress" style="width: 95%;">95%</div>
         </div>
       </div>
       <div class="skill">
-        <label for="css-skill">CSS</label>
+        <label for="css-skill">Cute meows</label>
         <div class="progress-bar">
-          <div id="css-skill" class="progress" style="width: 80%;">80%</div>
+          <div id="css-skill" class="progress" style="width: 100%;">100%</div>
         </div>
       </div>
       <div class="skill">
-        <label for="js-skill">JavaScript</label>
+        <label for="js-skill">Ravaging local plants</label>
         <div class="progress-bar">
-          <div id="js-skill" class="progress" style="width: 70%;">70%</div>
+          <div id="js-skill" class="progress" style="width: 80%;">80%</div>
         </div>
       </div>
       <div class="skill">
-        <label for="react-skill">React</label>
+        <label for="react-skill">Cuddling</label>
         <div class="progress-bar">
-          <div id="react-skill" class="progress" style="width: 75%;">75%</div>
+          <div id="react-skill" class="progress" style="width: 200%;">200%</div>
         </div>
       </div>
     </div>
